--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <div>
           I obtained my Ph.D. degree of Computer Applications Technology from the <a href="http://tca.iscas.ac.cn/"> TCA
           </a> lab,
-          at <a href="http://www.is.cas.cn/"> Institute of Software Chinese Academy of Sciences (ISCAS) </a>,
+          at <a href="http://www.is.cas.cn/"> Institute of Software Chinese Academy of Sciences (ISCAS) </a> in 2018,
           co-advised by Professor <a href="people.ucas.edu.cn/~0007886?language=en"> Purui Su </a>
-          and Professor <a href="https://dblp.uni-trier.de/pers/hd/f/Feng:Dengguo"> Dengguo Feng </a> in 2018.<br>
+          and Professor <a href="https://dblp.uni-trier.de/pers/hd/f/Feng:Dengguo"> Dengguo Feng </a>.<br>
           I obtained my B.E. degree of Information Security from
           <a href="http://en.hit.edu.cn/">Harbin Institute of Technology (HIT)</a> in 2012.<br>
           I was exchange to <a href="http://en.fcu.edu.tw/"> Feng Chia University </a> in 2010 for a semester.<br>
@@ -189,69 +189,46 @@
 
           <h3>Patents</h3>
           <div>
-            <ul><b>
-                <li> Bilsland Dissertation Fellowship </li>
-                <li> Distinguished Paper Award (USENIX Security 2017)</li>
-                <li> Distinguished Paper Award (NDSS 2016)</li>
-              </b></ul>
+            <ul>
+                <li> <b><i>Xiangkun Jia</i></b>, Chao Zhang, Purui Su, …… An automatic identification method for custom heap management functions based on dynamic features. in Chinese.  </li>
+                <li> <b><i>Xiangkun Jia</i></b>, Chao Zhang, Purui Su, …… An offline method for heap overflow discovery based active construction. in Chinese. </li>
+                <li> <b><i>Xiangkun Jia</i></b>, Liang He, Purui Su, …… A binary-oriented heap overflow detection method. in Chinese. </li>
+                <li> <b><i>Xiangkun Jia</i></b>, Jia Yan, Purui Su, …... A network protocol reverse analysis method based on identifying message segment separators. in Chinese. </li>
+            </ul>
           </div>
 
           <h3>Book</h3>
           <div>
-            <ul><b>
-                <li> Bilsland Dissertation Fellowship </li>
-                <li> Distinguished Paper Award (USENIX Security 2017)</li>
-                <li> Distinguished Paper Award (NDSS 2016)</li>
-              </b></ul>
+            <ul>
+                <li> Purui Su, Lingyun Ying, Yi Yang. Software security analysis and application. Chapter 2 basic knowledge and Chapter 5 symbolic execution. in Chinese. </li>
+            </ul>
           </div>
 
           <h3>Bug Reports</h3>
           <div>
-            <ul><b>
-                <li> Bilsland Dissertation Fellowship </li>
-                <li> Distinguished Paper Award (USENIX Security 2017)</li>
-                <li> Distinguished Paper Award (NDSS 2016)</li>
-              </b></ul>
+            <ul>
+                <li> CVE-2016-6164 for ffmpeg, CVE-2016-9931 for Realplayer, CVE-2017-13823 for QuickTime.</li> <br>
+                <li> Rewarded by Tencent Security Response Center, Alibaba Security Response Center</li>
+            </ul>
           </div>
 
 
           <div class="page-header">
             <h2>Professional Activities</h2>
           </div>
-          <h4>Student PC</h4>
+          <h3>Student PC</h3>
           <ul>
             <li>
-              IEEE Symposium on Security and Privacy (Oakland), 2019
+              IEEE Symposium on Security and Privacy (Oakland), 2018
             </li>
           </ul>
-          <h4>Sub-reviewer</h4>
+          <h3>Sub-reviewer</h3>
           <ul>
             <li>
-              ACM Conference on Computer and Communications Security (CCS), 2015, 2016, 2018
+                Conferences including CNS'2019, CSET’17, RAID’17, VARA’17, CODASPY’16
             </li>
             <li>
-              International Symposium on Research in Attacks, Intrusions, and Defenses (RAID), 2016
-            </li>
-            <li>
-              International Symposium on the Foundations of Software Engineering (FSE), 2016, 2018
-            </li>
-            <li>
-              Network and Distributed System Security Symposium (NDSS), 2017, 2018
-            </li>
-            <li>
-              International Conference on Software Engineering (ICSE), 2017, 2019
-            </li>
-            <li>
-              International Symposium on Software Testing and Analysis (ISSTA), 2016, 2017
-            </li>
-            <li>
-              Programming Language Design and Implementation (PLDI), 2017
-            </li>
-            <li>
-              IEEE Cybersecurity Development (SecDev), 2017
-            </li>
-            <li>
-              IEEE/ACM International Conference on Automated Software Engineering (ASE), 2018
+                Journals including Transactions on Software Engineering, Chinese Journal of Computers, Journal of Software, Chinese Journal of Electronics
             </li>
           </ul>
 
@@ -260,12 +237,12 @@
           </div>
           <div>
             <ul><b>
-                <li> Bilsland Dissertation Fellowship </li>
-                <li> Distinguished Paper Award (USENIX Security 2017)</li>
-                <li> Distinguished Paper Award (NDSS 2016)</li>
+                <li> Internet security scholarship of CHINA internet development foundation in 2017 </li>
+                <li> National Scholarship in 2017</li>
+                <li> Excellent graduate of Heilongjiang Province in China in 2012</li>
               </b></ul>
           </div>
-          
+
         </div> <!-- /.main -->
       </div><!-- /.row -->
     </div><!-- /.container -->
