--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             <li>
               <b>
-                <a href="papers/">Automatically assessing crashes from heap overflows</a>
+                <a href="papers/ASE2017.pdf">Automatically assessing crashes from heap overflows</a>
               </b>
               <br>
               Liang He,
@@ -173,7 +173,7 @@
 
             <li>
               <b>
-                <a href="papers/">Safety analysis and evaluation of security protocol implementation</a>
+                <a href="papers/protocol.pdf">Safety analysis and evaluation of security protocol implementation</a>
               </b>
               <br>
               <b><i>Xiangkun Jia</i></b>,
