--- a/index.html
+++ b/index.html
@@ -1,36 +1,21 @@
-<html>
+<HTML>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="img/icon.ico">
-  <title>Xiangkun Jia</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!--
-        <link href="css/font-awesome.min.css" rel="stylesheet">
-        -->
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130367591-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-130367591-1');
-  </script>
-</head>
+<HEAD>
+  <TITLE>Dinghao Wu's Home Page</TITLE>
+  <link rel="stylesheet" type="text/css" href="wu.css" />
+</HEAD>
 
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+<BODY>
 
-        <TABLE align="center">
+  <!-- <basefont face="verdana,georgia,arial,times new roman,courier new,sans serif" size=1> -->
+  <!-- <basefont face="verdana,geneva,helvetica,arial,sans serif" size=-1 color="red"> -->
+
+  <TABLE align="center" style="background-color:AliceBlue">
+    <TR>
+      <!-- <TD> &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; </TD> -->
+
+      <TD>
+        <TABLE>
           <TR>
             <TD>&nbsp; &nbsp; &nbsp;</TD>
             <TD VALIGN="middle"><IMG src="jia.jpg" border=0 alt="Xiangkun Jia" width="90%" height="90%"></TD>
@@ -76,192 +61,220 @@
           </TR>
         </TABLE>
 
-        <div class="page-header">
-          <h2>About Me</h2>
-        </div>
-        <div>
-          I obtained my Ph.D. degree of Computer Applications Technology from the <a href="http://tca.iscas.ac.cn/"> TCA
-          </a> lab,
-          at <a href="http://www.is.cas.cn/"> Institute of Software Chinese Academy of Sciences (ISCAS) </a> in 2018,
-          co-advised by Professor <a href="people.ucas.edu.cn/~0007886?language=en"> Purui Su </a>
-          and Professor <a href="https://dblp.uni-trier.de/pers/hd/f/Feng:Dengguo"> Dengguo Feng </a>.<br>
-          I obtained my B.E. degree of Information Security from
-          <a href="http://en.hit.edu.cn/">Harbin Institute of Technology (HIT)</a> in 2012.<br>
-          I was exchange to <a href="http://en.fcu.edu.tw/"> Feng Chia University </a> in 2010 for a semester.<br>
-          <!-- font size="+1" color="maroon"><b> I am on the academic job market this year. </b></font -->
-          Here is my
-          <font size="+1"><b>
-              <a href="jia-CV.pdf">[CV]</a>
-            </b></font>
-        </div>
 
-        <div class="open-header">
-          <h2>Research:</h2>
-          <p>
-            <font size="+1">My research interests focus on <b> software security</b> and <b>software engineering</b>,
-              including <b>program analysis</b>, <b>vulnerability analysis</b> and <b>malware detection</b></font>.<br>
-            The methods involves taint analysis, symbolic execution, fuzzing, virtualization and reverse engineering.
-            <br>
-            I worked on several projects, including
-          </p>
+        <hr>
 
-          <div>
-            <ul>
-              <li><b>Heap overflow vulnerability discovery/detection/assessment:</b>
-                Designed and implemented a system to discover/detect/assess heap overflow vulnerabilities based on
-                dynamic taint analysis and symbolic execution.
-              </li>
-              <li><b>Application-oriented taint analysis system development:</b>
-                Implemented hook functions for taint sources and heap allocation operations.
-              </li>
-              <li><b>Malware detection and analysis platform development:</b>
-                Implemented interaction analysis tools for malware detection based MFC.
-              </li>
-            </ul>
-          </div>
+        <TABLE align="center">
+          <TR>
+            <TD VALIGN="top" width=800 style="background-color:AliceBlue">
 
-          <!-- <div class="page-header"> -->
-          <!--   <h2>Publications</h2> -->
-          <!-- </div> -->
-          <div class="page-header">
-            <h2>Publications:</h2>
-          </div>
-          <h3>Papers</h3>
-          <ul>
-            <li>
-              <b>
-                <a href="papers/sec17-jia.pdf">Towards Efficient Heap Overflow Discovery</a>
-              </b>
-              <br>
-              <b><i>Xiangkun Jia</i></b>,
-              Chao Zhang,
-              Purui Su,
-              Yi Yang,
-              Huafeng Huang,
-              Dengguo Feng
-              <br>
-              Proceedings of the 26th USENIX Security Symposium (<b>Security 2017</b>)
-              <br>
-              Vancouver, BC, Canada, August 2017
-              <br>
-            </li>
-            <br>
+              <table border=0 cellspacing=0 cellpadding=0>
+                <div class="page-header">
+                  <h2>About Me</h2>
+                </div>
+                <div>
+                  I obtained my Ph.D. degree of Computer Applications Technology from the <a
+                    href="http://tca.iscas.ac.cn/"> TCA
+                  </a> lab,
+                  at <a href="http://www.is.cas.cn/"> Institute of Software Chinese Academy of Sciences (ISCAS) </a> in
+                  2018,
+                  co-advised by Professor <a href="people.ucas.edu.cn/~0007886?language=en"> Purui Su </a>
+                  and Professor <a href="https://dblp.uni-trier.de/pers/hd/f/Feng:Dengguo"> Dengguo Feng </a>.<br>
+                  I obtained my B.E. degree of Information Security from
+                  <a href="http://en.hit.edu.cn/">Harbin Institute of Technology (HIT)</a> in 2012.<br>
+                  I was exchange to <a href="http://en.fcu.edu.tw/"> Feng Chia University </a> in 2010 for a
+                  semester.<br>
+                  <!-- font size="+1" color="maroon"><b> I am on the academic job market this year. </b></font -->
+                  Here is my
+                  <font size="+1"><b>
+                      <a href="jia-CV.pdf">[CV]</a>
+                    </b></font>
+                </div>
 
-            <li>
-              <b>
-                <a href="papers/ASE2017.pdf">Automatically assessing crashes from heap overflows</a>
-              </b>
-              <br>
-              Liang He,
-              Yan Cai,
-              Hong Hu,
-              Purui Su,
-              Zhenkai Liang,
-              Yi Yang,
-              Huafeng Huang,
-              Jia Yan,
-              <b><i>Xiangkun Jia</i></b>,
-              Dengguo Feng
-              <br>
-              Proceedings of the 32nd IEEE/ACM International Conference on Automated Software Engineering (<b>ASE
-                2017</b>)
-              <br>
-              Urbana-Champaign, IL, USA, October, 2017
-              <br>
-            </li>
-            <br>
+                <div class="open-header">
+                  <h2>Research:</h2>
+                  <p>
+                    <font size="+1">My research interests focus on <b> software security</b> and <b>software
+                        engineering</b>,
+                      including <b>program analysis</b>, <b>vulnerability analysis</b> and <b>malware detection</b>
+                    </font>.<br>
+                    The methods involves taint analysis, symbolic execution, fuzzing, virtualization and reverse
+                    engineering.
+                    <br>
+                    I worked on several projects, including
+                  </p>
+                </div>
 
-            <li>
-              <b>
-                <a href="papers/protocol.pdf">Safety analysis and evaluation of security protocol implementation</a>
-              </b>
-              <br>
-              <b><i>Xiangkun Jia</i></b>,
-              Jia Yan,
-              Purui Su
-              <br>
-              Bulletin of Chinese Association for Cryptologic Research. Issue 6, 2014. Journal in Chinese.
-              <br>
-            </li>
-            <br>
-
-          </ul>
-
-          <h3>Patents</h3>
-          <div>
-            <ul>
-                <li> <b><i>Xiangkun Jia</i></b>, Chao Zhang, Purui Su, …… An automatic identification method for custom heap management functions based on dynamic features. in Chinese.  </li>
-                <li> <b><i>Xiangkun Jia</i></b>, Chao Zhang, Purui Su, …… An offline method for heap overflow discovery based active construction. in Chinese. </li>
-                <li> <b><i>Xiangkun Jia</i></b>, Liang He, Purui Su, …… A binary-oriented heap overflow detection method. in Chinese. </li>
-                <li> <b><i>Xiangkun Jia</i></b>, Jia Yan, Purui Su, …... A network protocol reverse analysis method based on identifying message segment separators. in Chinese. </li>
-            </ul>
-          </div>
-
-          <h3>Book</h3>
-          <div>
-            <ul>
-                <li> Purui Su, Lingyun Ying, Yi Yang. Software security analysis and application. Chapter 2 basic knowledge and Chapter 5 symbolic execution. in Chinese. </li>
-            </ul>
-          </div>
-
-          <h3>Bug Reports</h3>
-          <div>
-            <ul>
-                <li> CVE-2016-6164 for ffmpeg, CVE-2016-9931 for Realplayer, CVE-2017-13823 for QuickTime.</li> <br>
-                <li> Rewarded by Tencent Security Response Center, Alibaba Security Response Center</li>
-            </ul>
-          </div>
+                <div class="open-header">
+                  <h2>Research:</h2>
+                  <p>
+                    <font size="+1">My research interests focus on <b> software security</b> and <b>software
+                        engineering</b>,
+                      including <b>program analysis</b>, <b>vulnerability analysis</b> and <b>malware detection</b>
+                    </font>
+                    .<br>
+                    The methods involves taint analysis, symbolic execution, fuzzing, virtualization and reverse
+                    engineering.
+                    <br>
+                    I worked on several projects, including
+                  </p>
+                </div>
+                <div>
+                  <ul>
+                    <li><b>Heap overflow vulnerability discovery/detection/assessment:</b>
+                      Designed and implemented a system to discover/detect/assess heap overflow vulnerabilities based on
+                      dynamic taint analysis and symbolic execution.
+                    </li>
+                    <li><b>Application-oriented taint analysis system development:</b>
+                      Implemented hook functions for taint sources and heap allocation operations.
+                    </li>
+                    <li><b>Malware detection and analysis platform development:</b>
+                      Implemented interaction analysis tools for malware detection based MFC.
+                    </li>
+                  </ul>
+                </div>
 
 
-          <div class="page-header">
-            <h2>Professional Activities</h2>
-          </div>
-          <h3>Student PC</h3>
-          <ul>
-            <li>
-              IEEE Symposium on Security and Privacy (Oakland), 2018
-            </li>
-          </ul>
-          <h3>Sub-reviewer</h3>
-          <ul>
-            <li>
-                Conferences including CNS'2019, CSET’17, RAID’17, VARA’17, CODASPY’16
-            </li>
-            <li>
-                Journals including Transactions on Software Engineering, Chinese Journal of Computers, Journal of Software, Chinese Journal of Electronics
-            </li>
-          </ul>
+                <div class="page-header">
+                  <h2>Publications:</h2>
+                </div>
+                <h3>Papers</h3>
+                <ul>
+                  <li>
+                    <b>
+                      <a href="papers/sec17-jia.pdf">Towards Efficient Heap Overflow Discovery</a>
+                    </b>
+                    <br>
+                    <b><i>Xiangkun Jia</i></b>,
+                    Chao Zhang,
+                    Purui Su,
+                    Yi Yang,
+                    Huafeng Huang,
+                    Dengguo Feng
+                    <br>
+                    Proceedings of the 26th USENIX Security Symposium (<b>Security 2017</b>)
+                    <br>
+                    Vancouver, BC, Canada, August 2017
+                    <br>
+                  </li>
+                  <br>
 
-          <div class="page-header">
-            <h2>Awards and Honors</h2>
-          </div>
-          <div>
-            <ul><b>
-                <li> Internet security scholarship of CHINA internet development foundation in 2017 </li>
-                <li> National Scholarship in 2017</li>
-                <li> Excellent graduate of Heilongjiang Province in China in 2012</li>
-              </b></ul>
-          </div>
+                  <li>
+                    <b>
+                      <a href="papers/ASE2017.pdf">Automatically assessing crashes from heap overflows</a>
+                    </b>
+                    <br>
+                    Liang He,
+                    Yan Cai,
+                    Hong Hu,
+                    Purui Su,
+                    Zhenkai Liang,
+                    Yi Yang,
+                    Huafeng Huang,
+                    Jia Yan,
+                    <b><i>Xiangkun Jia</i></b>,
+                    Dengguo Feng
+                    <br>
+                    Proceedings of the 32nd IEEE/ACM International Conference on Automated Software Engineering (<b>ASE
+                      2017</b>)
+                    <br>
+                    Urbana-Champaign, IL, USA, October, 2017
+                    <br>
+                  </li>
+                  <br>
 
-        </div> <!-- /.main -->
-      </div><!-- /.row -->
-    </div><!-- /.container -->
-    <!-- Bootstrap core JavaScript
-            ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--
-            <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js"
-                    integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8="
-                    crossorigin="anonymous">
-            </script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-                    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-                    crossorigin="anonymous">
-            </script>
-            -->
-    <a href='https://clustrmaps.com/site/1ahkr' onclick="return false" title='Visit tracker'><img
-        src='//clustrmaps.com/map_v2.png?cl=ffffff&w=70&t=n&d=afPDoU_AQbPthT97Wwk0uSpph68N3qlve3IFGUSRIHA&co=ffffff'
-        style="display: none" /></a>
-</body>
+                  <li>
+                    <b>
+                      <a href="papers/protocol.pdf">Safety analysis and evaluation of security protocol
+                        implementation</a>
+                    </b>
+                    <br>
+                    <b><i>Xiangkun Jia</i></b>,
+                    Jia Yan,
+                    Purui Su
+                    <br>
+                    Bulletin of Chinese Association for Cryptologic Research. Issue 6, 2014. Journal in Chinese.
+                    <br>
+                  </li>
+                  <br>
 
-</html>
+                </ul>
+
+                <h3>Patents</h3>
+                <div>
+                  <ul>
+                    <li> <b><i>Xiangkun Jia</i></b>, Chao Zhang, Purui Su, …… An automatic identification method for
+                      custom
+                      heap management functions based on dynamic features. in Chinese. </li>
+                    <li> <b><i>Xiangkun Jia</i></b>, Chao Zhang, Purui Su, …… An offline method for heap overflow
+                      discovery
+                      based active construction. in Chinese. </li>
+                    <li> <b><i>Xiangkun Jia</i></b>, Liang He, Purui Su, …… A binary-oriented heap overflow detection
+                      method.
+                      in Chinese. </li>
+                    <li> <b><i>Xiangkun Jia</i></b>, Jia Yan, Purui Su, …... A network protocol reverse analysis method
+                      based
+                      on identifying message segment separators. in Chinese. </li>
+                  </ul>
+                </div>
+
+                <h3>Book</h3>
+                <div>
+                  <ul>
+                    <li> Purui Su, Lingyun Ying, Yi Yang. Software security analysis and application. Chapter 2 basic
+                      knowledge and Chapter 5 symbolic execution. in Chinese. </li>
+                  </ul>
+                </div>
+
+                <h3>Bug Reports</h3>
+                <div>
+                  <ul>
+                    <li> CVE-2016-6164 for ffmpeg, CVE-2016-9931 for Realplayer, CVE-2017-13823 for QuickTime.</li> <br>
+                    <li> Rewarded by Tencent Security Response Center, Alibaba Security Response Center</li>
+                  </ul>
+                </div>
+
+
+                <div class="page-header">
+                  <h2>Professional Activities</h2>
+                </div>
+                <h3>Student PC</h3>
+                <ul>
+                  <li>
+                    IEEE Symposium on Security and Privacy (Oakland), 2018
+                  </li>
+                </ul>
+                <h3>Sub-reviewer</h3>
+                <ul>
+                  <li>
+                    Conferences including CNS'2019, CSET’17, RAID’17, VARA’17, CODASPY’16
+                  </li>
+                  <li>
+                    Journals including Transactions on Software Engineering, Chinese Journal of Computers, Journal of
+                    Software, Chinese Journal of Electronics
+                  </li>
+                </ul>
+
+                <div class="page-header">
+                  <h2>Awards and Honors</h2>
+                </div>
+                <div>
+                  <ul><b>
+                      <li> Internet security scholarship of CHINA internet development foundation in 2017 </li>
+                      <li> National Scholarship in 2017</li>
+                      <li> Excellent graduate of Heilongjiang Province in China in 2012</li>
+                    </b></ul>
+                </div>
+
+              </table>
+
+          </TR>
+        </TABLE>
+        <hr>
+      </TD>
+    </TR>
+  </TABLE>
+
+</BODY>
+
+</HTML>
