--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 
 <HEAD>
-  <TITLE>Dinghao Wu's Home Page</TITLE>
+  <TITLE>Xiangkun Jia's Home Page</TITLE>
   <link rel="stylesheet" type="text/css" href="wu.css" />
 </HEAD>
 
