--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <TD>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</TD>
 
             <TD VALIGN="middle">
-              <h3 id="name">Xiangkun Jia</h3>
+              <h2 id="name">Xiangkun Jia</h2>
               <strong>
                 I am now a Postdoc at<br>
                 the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
@@ -222,7 +222,7 @@
 
 
                 <div class="page-header">
-                  <h2>Professional Activities</h2>
+                  <h2>Professional Activities:</h2>
                 </div>
                 <h3>Student PC</h3>
                 <ul>
@@ -242,7 +242,7 @@
                 </ul>
 
                 <div class="page-header">
-                  <h2>Awards and Honors</h2>
+                  <h2>Awards and Honors:</h2>
                 </div>
                 <div>
                   <ul><b>
