--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                 </div>
                 <div>
                   <ul>
+                    <li><b>Fuzzing:</b>
+                      Improve fuzzing strategies and extend fuzzing framework to kinds of targets.
+                    </li>
+                    <li><b>Reassemble disassembling:</b>
+                      Improve Project Uroboros which is a binary analysis and rewrite tool and apply it to kinds of scenarios.
+                    </li>
                     <li><b>Heap overflow vulnerability discovery/detection/assessment:</b>
                       Designed and implemented a system to discover/detect/assess heap overflow vulnerabilities based on
                       dynamic taint analysis and symbolic execution.
@@ -215,7 +221,7 @@
                 <h3>Bug Reports</h3>
                 <div>
                   <ul>
-                    <li> CVE-2016-6164 for ffmpeg, CVE-2016-9931 for Realplayer, CVE-2017-13823 for QuickTime.</li> <br>
+                    <li> ffmpeg CVE-2016-6164, Realplayer CVE-2016-9931, QuickTime CVE-2017-13823,PoDoFo CVE-2019-9687, etc.</li> <br>
                     <li> Rewarded by Tencent Security Response Center, Alibaba Security Response Center</li>
                   </ul>
                 </div>
@@ -238,6 +244,12 @@
                   <li>
                     Journals including Transactions on Software Engineering, Chinese Journal of Computers, Journal of
                     Software, Chinese Journal of Electronics
+                  </li>
+                </ul>
+                <h3>Service</h3>
+                <ul>
+                  <li>
+                    Judger for the 2019 graduate and undergraduate exhibition of PSU
                   </li>
                 </ul>
 
