--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   </a> lab,
                   at <a href="http://english.is.cas.cn/"> Institute of Software Chinese Academy of Sciences (ISCAS) </a> in
                   2018,
-                  co-advised by Professor <a href="people.ucas.edu.cn/~0007886?language=en"> Purui Su </a>
+                  co-advised by Professor <a href="https://dblp.org/pers/hd/s/Su:Purui"> Purui Su </a>
                   and Professor <a href="https://dblp.uni-trier.de/pers/hd/f/Feng:Dengguo"> Dengguo Feng </a>.<br>
                   I obtained my B.E. degree of Information Security from
                   <a href="http://en.hit.edu.cn/">Harbin Institute of Technology (HIT)</a> in 2012.<br>
