--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <h3>Sub-reviewer</h3>
                 <ul>
                   <li>
-                    Conferences including CNS'2019, CSET’17, RAID’17, VARA’17, CODASPY’16
+                    Conferences including CCS'2019, CNS'2019, CSET’17, RAID’17, VARA’17, CODASPY’16
                   </li>
                   <li>
                     Journals including Transactions on Software Engineering, Chinese Journal of Computers, Journal of
