--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <h3>Bug Reports</h3>
                 <div>
                   <ul>
-                    <li> ffmpeg CVE-2016-6164, Realplayer CVE-2016-9931, QuickTime CVE-2017-13823,PoDoFo CVE-2019-9687, etc.</li> <br>
+                    <li> ffmpeg CVE-2016-6164, Realplayer CVE-2016-9931, QuickTime CVE-2017-13823, PoDoFo CVE-2019-9687, etc.</li> <br>
                     <li> Rewarded by Tencent Security Response Center, Alibaba Security Response Center</li>
                   </ul>
                 </div>
@@ -239,7 +239,7 @@
                 <h3>Sub-reviewer</h3>
                 <ul>
                   <li>
-                    Conferences including CCS'2019, CNS'2019, CSET’17, RAID’17, VARA’17, CODASPY’16
+                    Conferences including CCS'2019, CNS'2019, CSET'17, RAID'17, VARA'17, CODASPY'16
                   </li>
                   <li>
                     Journals including Transactions on Software Engineering, Chinese Journal of Computers, Journal of
