--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <TD VALIGN="middle">
               <h2 id="name">Xiangkun Jia</h2>
               <strong>
-				      I am now working in Ant Financial, Alibaba as a Senior Engineer, for infra and data-system engineering.           
+              I am now working in Ant Financial, Alibaba as a Senior Engineer,<br> 
+              for infra and data-system engineering.           
               </strong><br><br>
 
               <strong>
