--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
               <strong>
                 Mailing Address:
               </strong><br>
-              9F East Tower of Beijing World Financial Center, NO. 1 East 3rd Ring Middle Road, Chaoyang Distribute, Beijing, China, 100020<br>
+              9F East Tower of Beijing World Financial Center,<br> 
+		    NO. 1 East 3rd Ring Middle Road, <br>
+		    Chaoyang Distribute, Beijing, China, 100020<br>
               <strong>
                 Phone:
               </strong><br>
