--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
 				          I was a Postdoc at<br>
                   the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
                   href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a>.<br>
-                  in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a><br>
-                  <a href="http://www.psu.edu/">The Pennsylvania State University</a><br> in 2018-2019.
-                  <!-- font size="+1" color="maroon"><b> I am on the academic job market this year. </b></font -->
+                  in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a>,
+                  <a href="http://www.psu.edu/">The Pennsylvania State University</a><br> in 2018-2019.</b>
                   Here is my
                   <font size="+1"><b>
                       <a href="jia-CV.pdf">[CV]</a>
