--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 				          I was a Postdoc at<br>
                   the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
                   href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a>.<br>
-                  in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a>,
-                  <a href="http://www.psu.edu/">The Pennsylvania State University</a><br> in 2018-2019.</b>
+                  in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a> of
+                  <a href="http://www.psu.edu/">The Pennsylvania State University</a><br> in 2018-2019.<br>
                   Here is my
                   <font size="+1"><b>
                       <a href="jia-CV.pdf">[CV]</a>
