--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
                   <a href="http://en.hit.edu.cn/">Harbin Institute of Technology (HIT)</a> in 2012.<br>
                   I was exchange to <a href="http://en.fcu.edu.tw/"> Feng Chia University </a> in 2010 for a
                   semester.<br>
-				          I was a Postdoc at<br>
-                  the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
+		  I was a Postdoc at the <a href="https://plato.ist.psu.edu/">Software Systems Security</a> lab headed by Professor <a
                   href="https://faculty.ist.psu.edu/wu/">Dinghao Wu</a>.<br>
-                  in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a> of
-                  <a href="http://www.psu.edu/">The Pennsylvania State University</a><br> in 2018-2019.<br>
+                  in <a href="http://ist.psu.edu/">College of Information Sciences and Technology</a> of <a href="http://www.psu.edu/">The Pennsylvania State University</a> 
+			in 2018-2019.<br>
                   Here is my
                   <font size="+1"><b>
                       <a href="jia-CV.pdf">[CV]</a>
